banner module updated
